--- a/resources/style.css
+++ b/resources/style.css
@@ -206,15 +206,15 @@
    
  
  :root{
-     --bg-color: linear-gradient(-45deg, #7400b8, #6930c3, #5e60ce, #5390d9, #4ea8de, #48bfe3, #56cfe1, #64dfdf, #72efdd, #80ffdb);
+     --bg-color: linear-gradient( 109.6deg,  rgba(61,245,167,1) 11.2%, rgba(9,111,224,1) 91.1% );
      --filename-color: white;
      --footer-color: #fcc700;
      --footer-font-color: black;
      --footer-icon-color:var(--footer-font-color);
      --player-border-color: #d3e0ea;
      --player-hover-color: var(--footer-color);
-     --player-border-hover-color: red;
-     --plyr-color-main: red;
+     --player-border-hover-color: #02ff00;
+     --plyr-color-main: #02ff00;
      transition: 0.3s;
  }
  
