--- a/resources/style.css
+++ b/resources/style.css
@@ -205,7 +205,7 @@
    
  
  :root{
-     --bg-color: linear-gradient( 111.5deg, rgb(255 144 101) 19.4%, rgba(255,22,22,1) 29.2%, rgba(255,22,133,1) 37.7%, rgba(255,22,197,1) 47.7%, rgba(232,22,255,1) 53.9%, rgba(162,22,255,1) 60%, rgba(80,22,255,1) 68.8%, rgba(22,104,255,1) 74.2%, rgba(22,168,255,1) 77.6%, rgba(22,255,220,1) 86.7%, rgba(22,255,179,1) 92.5%, rgba(22,255,109,1) 97.1%, rgba(92,255,22,1) 103.5% );
+     --bg-color: linear-gradient( 105.9deg,  rgba(15,209,165,1) 3.8%, rgba(15,157,209,1) 20.8%, rgba(133,13,230,1) 51.9%, rgba(230,13,202,1) 73.1%, rgba(242,180,107,1) 94.1% );
      --filename-color: white;
      --footer-color: #fcc700;
      --footer-font-color: black;
@@ -249,7 +249,7 @@
  }
  
  body.dark {
-     background-image: radial-gradient(#221f22, #1E1E1E);
+     background-image: radial-gradient( circle farthest-corner at -8.9% 51.2%,  rgba(255,124,0,1) 0%, rgba(255,124,0,1) 15.9%, rgba(255,163,77,1) 15.9%, rgba(255,163,77,1) 24.4%, rgba(19,30,37,1) 24.5%, rgba(19,30,37,1) 66% );
  }
  
  header {
